src/pyflakes/snapshots/ruff__pyflakes__tests__future_annotations.snap
---
source: src/pyflakes/mod.rs
expression: checks
---
- kind:
    UnusedImport:
      - models.Nut
      - false
  location:
    row: 8
    column: 4
  end_location:
    row: 8
    column: 7
  fix:
    location:
      row: 6
      column: 0
    end_location:
      row: 9
      column: 1
    content: "from models import (\n    Fruit,\n)"
    message: ~
  parent:
    row: 6
    column: 0
- kind:
    UndefinedName: Bar
  location:
    row: 26
    column: 18
  end_location:
    row: 26
    column: 21
  fix: ~
  parent: ~

